add mobile view

--- a/index.html
+++ b/index.html
@@ -6,17 +6,35 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/9e1ea52b25.js" crossorigin="anonymous"></script>
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
 <body>
 
-  Build The Community Your Fans Will Love
+  <div class="container">
+    <img src="./images/logo.svg" alt="logo" class="logo">
+    
+    <section>
+      <div class="intro-section">
+        <img src="./images/illustration-mockups.svg" alt="mockups">
+        <div class="content-container">
+          <h1>Build The Community Your Fans Will Love</h1> 
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion.
+          </p>      
+          <button>Register</button>
+        </div>
+      </div>
+    </section>
+    
+    <div class="social-media-container">
+      <i class="fab fa-facebook-f"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-instagram"></i>
+    </div>
+  </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-  
 </body>
 </html>
